fix(text-editor): ensure a tall `readonly` editor does not overflow its container
… and scrolls properly on Y axis instead.

--- a/src/components/text-editor/text-editor.scss
+++ b/src/components/text-editor/text-editor.scss
@@ -90,6 +90,7 @@ $min-height: 5rem;
         display: block;
         padding: var(--limel-text-editor-padding);
         overflow-y: auto;
+        height: 100%;
 
         &:before,
         &:after {
